# Kachu_v2

./: .env.example  .gitignore  Dockerfile  Kachu-v2-Product-Plan.md  Kachu-v2.code-workspace  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260427_0001_baseline.py  20260430_0002_automation_and_briefs.py  20260502_0003_meta_post_automation_settings.py  20260502_0004_line_scheduled_publishes.py
docs/: 20260501-kachu-line-faq-tracking.md  beta-smoke-test-checklist.md  boundary-contract.md  contract-test-matrix.md  credential-rotation-checklist.md  debug-playbook.md  deploy-runbook.md  feature-comparison.md  kachu-current-assessment-2026-04-27.md  kachu-full-validation-checklist.md  phase0-readiness-knowledge-design.md  release-runbook.md  tech-debt-and-issues.md  user-guide-boss.md
infra/: init-db.sql
scripts/: _run_migration.sh  backfill_tenant_knowledge.py  deploy_phase6_prod.py  post_approval_activate_gbp_notifications.py  release_check.py  runtime_preflight_checks.py  smoke_phase6.py  verify_google_review_webhook.py
src/kachu/: main.py  (+16 more)
tests/: test_edit_session_to_publish.py  test_google_oauth_discovery.py  test_line_webhook_resilience.py  test_memory.py  test_onboarding_document_ingestion.py  test_onboarding_flow.py  test_phase2_workflows.py  test_phase4_policy.py  test_phase5_features.py  test_phase6_audit.py  test_phase6_contracts.py  test_phase6_schema_contracts.py  test_phase6_workflow_guard.py  test_photo_content_e2e.py  test_publish_content_with_meta.py  test_security_guards.py
(+42 files in other folders)
