[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kachu"
version = "0.1.0"
description = "Kachu v2 — Agent-native 數位營運幕僚（微型創業者）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.7.0",
  "httpx>=0.27.0",
  "sqlmodel>=0.0.22",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.14.0",
  "line-bot-sdk>=3.12.0",
  "litellm>=1.0.0",
  "langfuse>=2.52.0",
  "apscheduler>=3.10.0",
  "redis>=5.2.0",
  "google-auth>=2.0.0",
  "google-auth-httplib2>=0.2.0",
  "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
kachu = ["static/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
